Fixed some problems with the caching, started work on API display
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@2 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html
+++ b/data/templates/default/list.html
@@ -152,7 +152,7 @@
 							label = document.createElement('a');
 							label.href = '?page=module&module=' + path + '__' + module;
 							label.setAttribute( 'onclick', 'javascript: click_module("' + path + '__' + module + '");' );
-							label.setAttribute( 'target', 'main' );
+							[% IF !sidebar %]label.setAttribute( 'target', 'main' );[% END %]
 							label.id = 'a__' + path + '__' + module;
 							label.appendChild( document.createTextNode( module ) );
 							count++;
@@ -225,5 +225,6 @@
 			<div id="inc">
 			</div>
 		</div>
+		<a href="?page=list&sidebar=1">Bookmark for Firefox sidebar</a>
 	</body>
 </html>
