--- a/data/templates/default/module_head.html
+++ b/data/templates/default/module_head.html
@@ -38,11 +38,15 @@
 	<body>
 		<table style="width:100%; vertical-align:center; text-align: center; clear: both; ">
 			<tr>
+[%- FOR source = sources -%]
 				<th>[% module %]</th>
-				<td><a target="contents" href="?page=pod&module=[% module %]&file=[% file %]&location=[% location %]"> POD </a></td>
-				<td><a target="contents" href="?page=api&module=[% module %]&file=[% file %]&location=[% location %]"> API </a></td>
-				<td><a target="contents" href="?page=code&module=[% module %]&file=[% file %]&location=[% location %]">CODE</a></td>
+				<td><a target="contents" href="?page=pod&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source %]"> POD </a></td>
+	[%#- UNLESS source =~ /\.pod$/ -%]
+				<td><a target="contents" href="?page=api&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source %]"> API </a></td>
+	[%#- END -%]
+				<td><a target="contents" href="?page=code&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source %]">CODE</a></td>
 				<td><a target="contents" href="http://search.cpan.org/search?query=[% module %]&mode=module"> CPAN</a></td>
+[%- END -%]
 			</tr>
 		</table>
 		<pre>
