--- a/data/templates/default/css.css
+++ b/data/templates/default/css.css
@@ -9,3 +9,33 @@ pre {
 h1, h2, h3, h4, h5, h6 {
 	background-color:	silver;
 }
+
+/* Perl Syntax Highliting Styles */
+.line_no {
+	background-color:	blue;
+	color:				black;
+}
+.reserved {
+	color:				red;
+}
+.pod {
+	color:				#A23;
+}
+.comment {
+	color:				#A41;
+}
+.builtin {
+	color:				#36E;
+}
+.other {
+	color:				#E33;
+}
+.operator {
+	color:				#4A4;
+}
+.logic {
+	color:				#92D;
+}
+.declatory {
+	color:				#F66;
+}
