More work on API display
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@3 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html
+++ b/data/templates/default/list.html
@@ -9,20 +9,21 @@
 		<!--/* <![CDATA[ */
 			@import url("?page=css.css");
 			body {
-				font-size:			10pt;
+				font-size:			8pt;
 				padding:			0px;
 				margin:				0px;
 			}
 			h1, h2, h3 {
 				margin-top:			0px;
 				padding:			5px 2px 4px 2px;
+				font-family:		sans-serif;
 			}
 			h1 {
-				font-size:			1em;
+				font-size:			1.4em;
 				text-align:			center;
 			}
 			h2 {
-				font-size:			0.9em;
+				font-size:			1.2em;
 				
 			}
 			table {
