--- a/data/templates/default/api.html
+++ b/data/templates/default/api.html
@@ -12,6 +12,45 @@
 		<meta name="description" content="" />
 		<meta name="keywords"	 content="" />
 		<style type="text/css">
+			@import url(?page=css.css);
+			pre {
+				padding:			3px;
+				-moz-border-radius:	5px;
+				border-radius:		5px;
+				font-family:		sans-serif;
+				font-size:			8pt;
+			}
+			table {
+				border:				1px outset;
+			}
+			th, td {
+				border:				1px inset;
+				font-size:			10pt;
+				padding:			2px;
+			}
+			th {
+				text-align:			right;
+			}
+			ul {
+				margin:				0px;
+				padding:			5px;
+				list-style-type:	none;
+			}
+			.hirachy {
+				float:				right;
+				border:				1px solid black;
+			}
+			.hirachy > div {
+				border:				1px solid black;
+				border-left:		0px;
+				border-right:		0px;
+				border-top:			0px;
+				font-weight:		bold;
+				font-size:			1.2em;
+				font-family:		sans-serif;
+				padding:			1px 5px 1px 5px;
+				text-align:			center;
+			}
 		</style>
 		<script type="text/javascript">
 		<!--
@@ -20,8 +59,114 @@
 		</script>
 	</head>
 	<body>
+		<h1>[% module %]</h1>
+		<div class="hirachy">
+			<div>Class Inheritance</div>
+			<ul>
+				<li>
+					[% module %]
+					[%- IF parents -%]
+					<ul>
+						[%- FOR parent = parents -%]
+						<li>parent</li>
+						[%- END -%]
+					</ul>
+					[%- END -%]
+				</li>
+			<ul>
+		</div>
+		<table>
+			<tr>
+				<th>Package</th>
+				<td>[% module %]</td>
+			</tr>
+			<tr>
+				<th>Version</th>
+				<td>[% version %]</td>
+			</tr>
+			<tr>
+				<th>Modules</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Inherited Modules</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Class Methods</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Object Methods</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>General Subroutines</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Package</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Package</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Package</th>
+				<td></td>
+			</tr>
+			<tr>
+				<th>Package</th>
+				<td></td>
+			</tr>
+		</table>
 		<pre>
 [% DUMP %]
 		</pre>
+		<br />
+		<div style="clear:both;font-size:0.8em">
+			<b>Note:</b> This API is just a guess on the meaning of the subroutines in the file.<br />
+			<div style="clear:both;">
+				<i>Class Methods</i> are assumed be in one of the following forms:
+				<pre style="width:18em;float: left">
+sub class_method {
+	my $class = shift;
+	...
+}</pre>
+				<div style="float:left;padding:5px"><br />or</div>
+				<pre style="width:18em;float: left">
+sub class_method {
+	my $caller = shift;
+	...
+}</pre>
+			</div>
+			<div style="clear:both;">
+				<i>Object Methods</i> are assumed to be in one of the following forms:
+				<pre style="width:18em;float: left">
+sub object_method {
+	my $self = shift;
+	...
+}</pre>
+				<div style="float:left;padding:5px"><br />or</div>
+				<pre style="width:18em;float: left">
+sub object_method {
+	my $this = shift;
+	...
+}</pre>
+				<div style="float:left;padding:5px"><br />or</div>
+				<pre style="width:20em;float: left">
+sub object_method {
+	my ( $self, ... ) = @_;
+	...
+}</pre>
+				<div style="float:left;padding:5px"><br />or</div>
+				<pre style="width:20em;float: left">
+sub object_method {
+	my ( $this, ... ) = @_;
+	...
+}</pre>
+			</div>
+		</div>
 	</body>
 </html>
