Some quick look & feel changes
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@4 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/api.html
+++ b/data/templates/default/api.html
@@ -39,6 +39,8 @@
 			.hirachy {
 				float:				right;
 				border:				1px solid black;
+				-moz-border-radius:	3px;
+				border-radius:		3px;
 			}
 			.hirachy > div {
 				border:				1px solid black;
@@ -50,6 +52,8 @@
 				font-family:		sans-serif;
 				padding:			1px 5px 1px 5px;
 				text-align:			center;
+				-moz-border-radius:	3px 3px 0px 0px;
+				border-radius:		3px;
 			}
 		</style>
 		<script type="text/javascript">
