--- a/data/templates/default/css.css
+++ b/data/templates/default/css.css
@@ -9,6 +9,18 @@ pre {
 h1, h2, h3, h4, h5, h6 {
 	background-color:	silver;
 }
+h1 {
+	padding-left:		4px;
+}
+h2 {
+	padding-left:		8px;
+}
+h3 {
+	padding-left:		12px;
+}
+h4 {
+	padding-left:		16px;
+}
 
 /* Perl Syntax Highliting Styles */
 .line_no {
