--- a/data/templates/default/module_head.html
+++ b/data/templates/default/module_head.html
@@ -1,10 +1,16 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html
 	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-AU" xml:lang="en-AU">
 	<head>
-		<title>Module Options</title>
+		<title>Module Options for [% module %]</title>
+		<meta http-equiv="Content-Type"		content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Language"	content="en-au" />
+		<meta name="author"		 content="Ivan Wills" />
+		<meta name="copyright"	 content="Copyright (c) 2006 Ivan Wills, All Rights Reserved" />
+		<meta name="description" content="" />
+		<meta name="keywords"	 content="" />
 		<style type="text/css">
 			html {
 				padding:		0px;
