Added link to newly created DocPerl home page
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@15 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html
+++ b/data/templates/default/list.html
@@ -243,6 +243,8 @@
 			<div id="inc">
 			</div>
 		</div>
+		<a href="http://docperl.sourceforge.net/">DocPerl Home Page</a>
+		<br />
 		<a href="?page=list&sidebar=1">Bookmark for Firefox sidebar</a>
 	</body>
 </html>
