--- a/data/templates/default/module_head.html
+++ b/data/templates/default/module_head.html
@@ -12,6 +12,8 @@
 		<meta name="description" content="" />
 		<meta name="keywords"	 content="" />
 		<style type="text/css">
+		<!--/* <![CDATA[ */
+			@import url("?page=css.css");
 			html {
 				padding:		0px;
 				margin:			0px;
@@ -34,6 +36,7 @@
 				display:		inline;
 			}
 			pre { display: none; }
+		/* ]]> */-->
 		</style>
 		<script type="text/javascript">
 		<!--
@@ -46,11 +49,13 @@
 [%- FOR source = sources -%]
 			<tr>
 				<th>[% IF !first %][% first = 1 %][% module %][% END %]</th>
-				<td><a target="contents" href="?page=pod&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source %]"> POD </a></td>
-	[%#- UNLESS source =~ /\.pod$/ -%]
-				<td><a target="contents" href="?page=api&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source %]"> API </a></td>
-	[%#- END -%]
-				<td><a target="contents" href="?page=code&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source %]">CODE</a></td>
+				<td><a target="contents" href="?page=pod&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source.file %]"> POD </a></td>
+				<td>
+	[%- UNLESS source.suffix == 'pod' -%]
+				<a target="contents" href="?page=api&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source.file %]"> API </a>
+	[%- END -%]
+				</td>
+				<td><a target="contents" href="?page=code&module=[% module %]&file=[% file %]&location=[% location %]&source=[% source.file %]">CODE</a></td>
 				<td><a target="contents" href="http://search.cpan.org/search?query=[% module %]&mode=module"> CPAN</a></td>
 			</tr>
 [%- END -%]
