Fixed loading of DocPerl Home Page to load into a new window
git-svn-id: https://docperl.svn.sourceforge.net/svnroot/docperl/trunk/docperl@21 df482c85-7f0f-0410-bf46-9d4e49b368ba

--- a/data/templates/default/list.html
+++ b/data/templates/default/list.html
@@ -274,7 +274,7 @@
 			<div id="inc">
 			</div>
 		</div>
-		<a href="http://docperl.sourceforge.net/">DocPerl Home Page</a>
+		<a href="http://docperl.sourceforge.net/" target="_blank">DocPerl Home Page</a>
 		<br />
 		<a href="?page=list&sidebar=1">Bookmark for Firefox sidebar</a>
 	</body>
